# HugoAura-Install

./: .gitignore  README.md  hugoaura_installer.spec  pyproject.toml  requirements.txt  version_info.py  version_info.txt
.github/scripts/: update_versions.py
.github/workflows/: build.yml  build_win7.yml  update-static-ver-json.yml  update-versions.yml
hooks/: hook-PIL.py
scripts/: build.bat  update_versions.py
src/: app.py  installer.py  lifecycle.py  main.py  uninstaller.py  version.py
src/app/: __init__.py
src/app/public/: versions.json
src/app/tk/: __init__.py
src/app/tk/controller/: __init__.py  main_controller.py
src/app/tk/models/: __init__.py  installer_model.py
src/app/tk/ui/: __init__.py  main_window.py
src/config/: config.py
src/logger/: initLogger.py
src/typeDefs/: lifecycle.py
src/utils/: asarPatcher.py  backup.py  dirSearch.py  fileDownloader.py  killer.py  uac.py  version_manager.py
