[project]
name = "aurainstaller"
version = "0.0.1-alpha"
description = ""
authors = [
    {name = "Minoricew",email = "154642983+Minoricew@users.noreply.github.com"}
]
license = {text = "GNU GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
