[project]
name = "aura_installer"
version = "0.0.1-alpha"
description = ""
authors = [
    {name = "Minoricew",email = "154642983+Minoricew@users.noreply.github.com"}
]
license = {text = "GNU GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyinstaller (>=6.14.1,<7.0.0)",
    "ttkbootstrap (>=1.10.1,<2.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "asar (>=0.1.2,<0.1.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
